# ChangeLog for dev-util/cake
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  18 Feb 2012; James Rowe <jnrowe@gmail.com> -cake-0.2.ebuild,
  cake-0.2.2.ebuild:
  Keyworded x86.

  17 Feb 2012; James Rowe <jnrowe@gmail.com> cake-0.2.2.ebuild:
  Keyworded amd64.

*cake-0.2.3 (01 Feb 2012)

  01 Feb 2012; James Rowe <jnrowe@gmail.com> +cake-0.2.3.ebuild:
  Version bump [533].

*cake-0.2.2 (18 Jan 2012)

  18 Jan 2012; James Rowe <jnrowe@gmail.com> +cake-0.2.2.ebuild:
  Version bump [518].

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  16 Jun 2011; James Rowe <jnrowe@gmail.com> cake-0.2.ebuild:
  Keyworded x86.

  15 Jun 2011; James Rowe <jnrowe@gmail.com> cake-0.2.ebuild:
  Keyworded amd64.

  18 May 2011; James Rowe <jnrowe@gmail.com> cake-0.2.ebuild:
  Keyworded ~x86.

*cake-0.2 (16 May 2011)

  16 May 2011; James Rowe <jnrowe@gmail.com> +cake-0.2.ebuild, +metadata.xml,
  +watch:
  Initial ebuild, by me [365].
