@@ -1,12 +1,11 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA512
 
-DIST cake-0.2.2.tar.gz 3968 RMD160 34626a648461620484f9e54dc8304e762c49d4d5 SHA1 2cb5462d005575094b9e20b270eac9ea5deabda4 SHA256 b01ad4ad7024798960cb891d7d4a60e8652965394402fa7a9b58eaf9782534c4
 DIST cake-0.2.3.tar.gz 4408 RMD160 c4e589e8556f40542b594d1979f334b730a7a331 SHA1 f49bd4d28a53e0bf0761c0ac5b5a91bb629478d0 SHA256 27654e25203fb6f97b910c5515551b20e75f6d744f7f95832756238f30d3a4c8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk8/aXMACgkQzJrj3cAXR0mUxgCgg04iB6s4tulGpF/c6qF5Qgh/
-t9sAoLXfJGlf4x7xAkYeDOOtCQKQuzlr
-=a786
+iEYEAREKAAYFAk9QxuwACgkQzJrj3cAXR0kisACguG8EKwf0p8ygARWlxKktz3OZ
+IHMAnRTnYmYwdTc2rvzLm95CI9T2ze9k
+=5h4u
 -----END PGP SIGNATURE-----
