@@ -15,7 +15,7 @@ DESCRIPTION="Minimalistic Python build tool inspired by Rake"
 
 LICENSE="GPL-3"
 SLOT="0"
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="~amd64 x86"
 IUSE=""
 
 DEPEND=""
