@@ -1,12 +1,0 @@
-DEFINED_PHASES=compile install postinst postrm prepare
-DEPEND=>=app-admin/eselect-python-20091230 || ( =dev-lang/python-3.2* =dev-lang/python-3.1* =dev-lang/python-2.7* =dev-lang/python-2.6* )
-DESCRIPTION=Minimalistic Python build tool inspired by Rake
-EAPI=3
-HOMEPAGE=http://pypi.python.org/pypi/cake/
-KEYWORDS=amd64 x86
-LICENSE=GPL-3
-RDEPEND=dev-python/colorama >=app-admin/eselect-python-20091230 || ( =dev-lang/python-3.2* =dev-lang/python-3.1* =dev-lang/python-2.7* =dev-lang/python-2.6* )
-SLOT=0
-SRC_URI=mirror://pypi/c/cake/cake-0.2.2.tar.gz
-_eclasses_=distutils	c8b0cab86443a130f3737ad1456d57d3	eutils	80d5ff61404a8ac834527cfb70ab2fae	jnrowe-pypi	ec904774b8c8477cdb89043eb65c764c	multilib	5f4ad6cf85e365e8f0c6050ddd21659e	portability	536c5e70c5fb252ed3b769e04aa3f05b	python	06dff99bcab2fd584bd6d2aa6019ee19	toolchain-funcs	6526ac6fc9aedf391efb91fcd75ace68	user	32a09e82e2f592bf88ad2fd08525166e
-_md5_=6ef43c4283fcf95e56983058539b65a7
