@@ -3,7 +3,6 @@ REM 2012-03-02 *1 MSG %"Stabilise amd64 dev-python/blessings-1.3%" %a
 REM 2012-03-02 *1 MSG %"Stabilise amd64 media-gfx/blockdiag-1.1.2%" %a
 REM 2012-03-02 *1 MSG %"Stabilise amd64 dev-python/isodate-0.4.7%" %a
 REM 2012-03-02 *1 MSG %"Stabilise amd64 dev-util/cake-0.2.3%" %a
-REM 2012-03-02 *1 MSG %"Stabilise x86 dev-util/cake-0.2.3%" %a
 REM 2012-03-02 *1 MSG %"Stabilise amd64 app-misc/hammertime-0.2.4%" %a
 REM 2012-03-02 *1 MSG %"Stabilise x86 app-misc/hammertime-0.2.4%" %a
 REM 2012-03-02 *1 MSG %"Stabilise amd64 dev-python/lettuce-0.1.34%" %a
