@@ -2,6 +2,10 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  02 Mar 2012; James Rowe <jnrowe@gmail.com> -cake-0.2.2.ebuild,
+  cake-0.2.3.ebuild:
+  Keyworded x86.
+
   18 Feb 2012; James Rowe <jnrowe@gmail.com> -cake-0.2.ebuild,
   cake-0.2.2.ebuild:
   Keyworded x86.
